# hostage

./: .gitignore  CMakeLists.txt  README.md  hosts_listener.cpp  hosts_listener.h  main.cpp
src/: hosts.cpp  hosts.h  hosts_line.cpp  hosts_line.h  main.cpp
src/antlr4/: hosts.g4  hosts_lexer.g4
src/gettext/: gettext_defs.h
src/hosts_parser/: command_listener.cpp  command_listener.h  command_parser.cpp  command_parser.h  hosts_file_parser.cpp  hosts_file_parser.h  hosts_listener.cpp  hosts_listener.h
src/parser/: command_parser.cpp  command_parser.h  hosts_file_parser.cpp  hosts_file_parser.h
